# gputracer

./: .gitignore  CMakeLists.txt  README.md  gputracer.sln
gputracer/: CMakeCache.txt  ComputeShader.h  Shader.h  ShaderBrowser.h  ShaderClip.h  TextEditor.cpp  TextEditor.h  WindowManager.h  blah.comp  channel0.comp  channel1.comp  compute.comp  erosion.comp  glad.c  gputracer.vcxproj  gputracer.vcxproj.filters  helix.comp  imgui.ini  main.cpp  main_glad.cpp  mandelbulb.comp  patterns.comp  plasma.comp  raytrace.comp  raytrace.glsl  test245.comp
gputracer/MessageBus/: MessageBus.cpp  MessageBus.h  Topic.h
gputracer/UI/: AWindow.h  AbstractWindow.h  IView.h  SettingsWindow.h
gputracer/imgui/: ImGuiFileDialog.cpp  imgui.ini
gputracer/nodes/: Node.h  Port.h
gputracer/shaders/: blah2.comp  erosion_channel1.comp  functions.comp  helix.comp  ornaments.comp  plasma.comp  rainforest.comp  rainforest_channel0.comp  raymarch.comp  raytrace.comp  template.comp  vertex.vert  voyage.comp
include/glad/: glad.h
shaders/: checkers.comp  patterns.comp
